app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
spec:
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      containers:
      - name: dummy-app
        image: nginx:latest
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: dummy-app-svc
spec:
  type: NodePort
  selector:
    app: dummy-app
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dummy-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dummy.local.host
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dummy-app-svc
            port:
              number: 80
